app-others/test_load_balancer/2-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: app
  # annotations:
  #     cert-manager.io/issuer: letsencrypt-bookstore
spec:
  selector:
    istio: ingress-gateway
    # match this label with the gateway pod

  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - app.papavonning.com

  - port:
        number: 443
        name: https
        protocol: HTTPS
    hosts:
      - app.papavonning.com
    tls:
      credentialName: acme-crt-secret-app-nginx
      mode: SIMPLE
