app-others/test_load_balancer/1-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-route
  namespace: app
spec:
  hosts:
  - app.papavonning.com

  gateways: 
  - nginx-gateway
  # name of the gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx-service.app.svc.cluster.local
        subset: v1
      weight: 50
    - destination:
        host: nginx-service.app.svc.cluster.local
        subset: v2
      weight: 50


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-destination
  namespace: app
spec:
  host: nginx-service.app.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
